--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,6 +24,8 @@ jobs:
         with:
           version: 10
           run_install: false
+      - name: Install dependecies
+        run: pnpm i
       - name: Build the project
         run: npm run build
       - name: Init Fly.io
