--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,6 +10,13 @@ jobs:
     concurrency: deploy-group
     env:
       FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
+      DB_HOST: ${{ secrets.DB_HOST }}
+      DB_USER: ${{ secrets.DB_USER }}
+      DB_PASSWORD: ${{ secrets.DB_PASSORD }}
+      DB_NAME: ${{ secrets.DB_NAME }}
+      DB_SSL: ${{ secrets.DB_SSL }}
+      DB_OWNER_USER: ${{ secrets.DB_OWNER_USER }}
+      DB_OWNER_PASSWORD: ${{ secrets.DB_OWNER_PASSWORD }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -26,6 +33,8 @@ jobs:
         run: pnpm i
       - name: Build the project
         run: npm run build
+      - name: Run migrations
+        run: pnpm migrate
       - name: Init Fly.io
         uses: superfly/flyctl-actions/setup-flyctl@master
       - name: Fly.io add secrets
@@ -33,5 +42,7 @@ jobs:
           flyctl secrets set DB_HOST=${{ secrets.DB_HOST }}
           flyctl secrets set DB_USER=${{ secrets.DB_USER }}
           flyctl secrets set DB_PASSWORD=${{ secrets.DB_PASSWORD }}
+          flyctl secrets set DB_NAME=${{ secrets.DB_NAME }}
+          flyctl secrets set DB_SSL=${{ secrets.DB_SSL }}
       - name: Deploy to Fly.io
         run: flyctl deploy --remote-only --ha=false
