--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,11 +12,8 @@ jobs:
       FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
       DB_HOST: ${{ secrets.DB_HOST }}
       DB_USER: ${{ secrets.DB_USER }}
-      DB_PASSWORD: ${{ secrets.DB_PASSORD }}
+      DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
       DB_NAME: ${{ secrets.DB_NAME }}
-      DB_SSL: ${{ secrets.DB_SSL }}
-      DB_OWNER_USER: ${{ secrets.DB_OWNER_USER }}
-      DB_OWNER_PASSWORD: ${{ secrets.DB_OWNER_PASSWORD }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -43,6 +40,5 @@ jobs:
           flyctl secrets set DB_USER=${{ secrets.DB_USER }}
           flyctl secrets set DB_PASSWORD=${{ secrets.DB_PASSWORD }}
           flyctl secrets set DB_NAME=${{ secrets.DB_NAME }}
-          flyctl secrets set DB_SSL=${{ secrets.DB_SSL }}
       - name: Deploy to Fly.io
         run: flyctl deploy --remote-only --ha=false
