--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/typeorm": "^11.0.0",
+    "@types/passport-http": "^0.3.11",
     "bcryptjs": "^3.0.3",
     "cookie-parser": "^1.4.7",
     "passport": "^0.7.0",
+    "passport-http": "^0.3.0",
     "passport-local": "^1.0.0",
     "pg": "^8.16.0",
     "reflect-metadata": "^0.2.2",
