--- a/package.json
+++ b/package.json
@@ -24,15 +24,15 @@
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
+    "@nestjs/jwt": "^11.0.2",
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/swagger": "^11.2.3",
     "@nestjs/typeorm": "^11.0.0",
-    "@types/passport-http": "^0.3.11",
     "bcryptjs": "^3.0.3",
     "cookie-parser": "^1.4.7",
     "passport": "^0.7.0",
-    "passport-http": "^0.3.0",
+    "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "pg": "^8.16.0",
     "reflect-metadata": "^0.2.2",
@@ -51,6 +51,7 @@
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.10.7",
+    "@types/passport-jwt": "^4.0.1",
     "@types/passport-local": "^1.0.38",
     "@types/supertest": "^6.0.2",
     "dotenv": "^16.5.0",
