--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,6 +14,7 @@ jobs:
       DB_USER: ${{ secrets.DB_USER }}
       DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
       DB_NAME: ${{ secrets.DB_NAME }}
+      JWT_SECRET: ${{ secrets.JWT_SECRET }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -42,5 +43,6 @@ jobs:
           flyctl secrets set DB_USER=${{ secrets.DB_USER }}
           flyctl secrets set DB_PASSWORD=${{ secrets.DB_PASSWORD }}
           flyctl secrets set DB_NAME=${{ secrets.DB_NAME }}
+          flyctl secrets set JWT_SECRET=${{ secrets.JWT_SECRET }}
       - name: Deploy to Fly.io
         run: flyctl deploy --remote-only --ha=false
